# mcs.imageprocessing

./: README.md
camera_cal/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
camera_cal/t1/: Makefile  cmake_install.cmake  main.cpp  main.out
camera_cal2/: CMakeCache.txt  Makefile  cmake_install.cmake  presentacion.pptx
camera_cal2/t1/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  main.out
camera_cal3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
camera_cal3/t1/: CalibHandler.h  Ellipse.h  Makefile  ProcManager.h  calib_asycircles_life.yml  calib_asycircles_ps3.yml  calib_chess.yml  calib_chess_life.yml  calib_chess_ps3.yml  calib_concentrics_life.yml  calib_concentrics_ps3.yml  cmake_install.cmake  main.cpp  main.out
camera_cal4/: CMakeCache.txt  Makefile  README.md  cmake_install.cmake
camera_cal4/res/: .gitignore
camera_cal4/res/results/: calib.yml
camera_cal4/res/results/asymmetric_20/: initial_calibration.yml
camera_cal4/t1/: CMakeCache.txt  CMakeLists.txt  CalibHandler.h  CalibManager.h  IterativeCalibration.h  Makefile  ProcManager.h  RingsDetector.h  SelectorFrame.h  Utils.h  calib_asycircles.yml  calib_asycircles_life.yml  calib_asycircles_ps3.yml  calib_chess_life.yml  calib_chess_ps3.yml  calib_concentrics.yml  calib_concentrics_life.yml  calib_concentrics_ps3.yml  chess_ps3.txt  cmake_install.cmake  grid.h  life_asymmetric_20.txt  life_asymmetric_30.txt  life_asymmetric_50.txt  life_chess_20.txt  life_chess_30.txt  life_chess_40.txt  life_chess_50.txt  life_rings_20.txt  life_rings_30.txt  life_rings_40.txt  life_rings_50.txt  main.cpp  main.out  main_o.cpp  ps3_asymmetric_30.txt  ps3_asymmetric_40.txt  ps3_asymmetric_50.txt  ps3_chess_20.txt  ps3_chess_30.txt  (+7 more)
camera_calibration/: CMakeCache.txt  Makefile  cmake_install.cmake
camera_calibration/t1/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  main.out
t1/build-editor-Desktop_Qt_5_10_0_GCC_64bit-Debug/: Makefile  editor  moc_mainwindow.cpp  ui_mainwindow.h
t1/editor/: FFT.h  Image.h  editor.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  utils.h
(+14 files in other folders)
